<resources>
    <string name="app_name">Editor</string>
    <string name="post_settings">Settings</string>
    <string name="post_content">Content</string>
    <string name="post_title">Title</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="edit">Edit</string>
    <string name="tap_to_try_again">Tap to try again!</string>
    <string name="uploading">Uploading…</string>
    <string name="uploading_gallery_placeholder">Uploading gallery…</string>

    <string name="alert_insert_image_html_mode">Can\'t insert media directly in HTML mode. Please switch back to visual mode.</string>
    <string name="alert_action_while_uploading">You are currently uploading media. Please wait until this completes.</string>
    <string name="alert_error_adding_media">An error occurred while inserting media</string>

    <string name="stop_upload_dialog_title">Stop uploading?</string>
    <string name="stop_upload_button">Stop Upload</string>

    <string name="format_bar_tag_bold" translatable="false">bold</string>
    <string name="format_bar_tag_italic" translatable="false">italic</string>
    <string name="format_bar_tag_blockquote" translatable="false">blockquote</string>
    <string name="format_bar_tag_unorderedList" translatable="false">unorderedList</string>
    <string name="format_bar_tag_orderedList" translatable="false">orderedList</string>
    <string name="format_bar_tag_strikethrough" translatable="false">strikeThrough</string>
    <string name="format_bar_tag_link" translatable="false">link</string>

    <!-- link view -->
    <string name="link_enter_url">URL</string>
    <string name="link_enter_url_text">Link text (optional)</string>
    <string name="create_a_link">Create a link</string>

    <!-- image settings -->
    <string name="image_settings">Image settings</string>
    <string name="title">Title</string>
    <string name="width">Width</string>
    <string name="featured">Use as featured image</string>
    <string name="featured_in_post">Include image in post content</string>
    <string name="image_alignment">Alignment</string>
    <string name="horizontal_alignment">Horizontal alignment</string>
    <string name="caption">Caption (optional)</string>

    <string name="image_settings_dismiss_dialog_title">Discard unsaved changes?</string>
    <string name="image_settings_save_toast">Changes saved</string>

    <string name="image_caption">Caption</string>
    <string name="image_alt_text">Alt text</string>
    <string name="image_link_to">Link to</string>
    <string name="image_width">Width</string>

    <string name="alignement_none">None</string>
    <string name="alignement_left">Left</string>
    <string name="alignement_center">Center</string>
    <string name="alignement_right">Right</string>

    <string-array name="alignment_key_array" translatable="false">
        <item>none</item>
        <item>left</item>
        <item>center</item>
        <item>right</item>
    </string-array>

    <string-array name="alignment_array" translatable="false">
        <item>@string/alignement_none</item>
        <item>@string/alignement_left</item>
        <item>@string/alignement_center</item>
        <item>@string/alignement_right</item>
    </string-array>

    <!-- Accessibility - format bar button descriptions -->
    <string name="format_bar_description_bold">Bold</string>
    <string name="format_bar_description_italic">Italic</string>
    <string name="format_bar_description_underline">Underline</string>
    <string name="format_bar_description_strike">Strikethrough</string>
    <string name="format_bar_description_quote">Block quote</string>
    <string name="format_bar_description_link">Insert link</string>
    <string name="format_bar_description_more">Insert more</string>
    <string name="format_bar_description_media">Insert media</string>
    <string name="format_bar_description_ul">Unordered list</string>
    <string name="format_bar_description_ol">Ordered list</string>
    <string name="format_bar_description_html">HTML mode</string>
    <string name="visual_editor">Visual editor</string>
    <string name="image_thumbnail">Image thumbnail</string>

    <string name="editor_failed_uploads_switch_html">Some media uploads have failed. You can\'t switch to HTML mode
        in this state. Remove all failed uploads and continue?</string>
    <string name="editor_remove_failed_uploads">Remove failed uploads</string>

    <string name="editor_dropped_text_error">Error occurred while dropping text</string>
    <string name="editor_dropped_title_images_not_allowed">Dropping images in the Title is not allowed</string>
    <string name="editor_dropped_html_images_not_allowed">Dropping images while in HTML mode is not allowed</string>
    <string name="editor_dropped_unsupported_files">Warning: not all dropped items are supported!</string>
</resources>
